infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: shaolinmkz/client
---
apiVersion: v1
kind: Service
metadata:
  name: client-clusterip-srv # make sure that the name is different from the NodeService created (client-srv.yaml)
spec:
  type: ClusterIP # optional (If omitted kubernetes will default to ClusterIP)
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000

# ---
# seperator used to create multiple deployment configs in one yaml file
