infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: shaolinmkz/comments
---
apiVersion: v1
kind: Service
metadata:
  name: comments-clusterip-srv # make sure that the name is different from the NodeService created (comments-srv.yaml)
spec:
  type: ClusterIP # optional (If omitted kubernetes will default to ClusterIP)
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4002
      targetPort: 4002

# ---
# seperator used to create multiple deployment configs in one yaml file
