infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: shaolinmkz/moderation
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-clusterip-srv # make sure that the name is different from the NodeService created (moderation-srv.yaml)
spec:
  type: ClusterIP # optional (If omitted kubernetes will default to ClusterIP)
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4004
      targetPort: 4004

# ---
# seperator used to create multiple deployment configs in one yaml file
