infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: shaolinmkz/posts
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv # make sure that the name is different from the NodeService created (posts-srv.yaml)
spec:
  type: ClusterIP # optional (If omitted kubernetes will default to ClusterIP)
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000

# ---
# seperator used to create multiple deployment configs in one yaml file
