infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: shaolinmkz/query
---
apiVersion: v1
kind: Service
metadata:
  name: query-clusterip-srv # make sure that the name is different from the NodeService created (query-srv.yaml)
spec:
  type: ClusterIP # optional (If omitted kubernetes will default to ClusterIP)
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4003
      targetPort: 4003

# ---
# seperator used to create multiple deployment configs in one yaml file
